@@ -19,6 +19,7 @@
 - Management console:
 	- Mutiple files can be scheduled for upload to agent at once
 	- DCIs created from templates made visually distinguishable in data collection editor
+	- "Inverted" flag ignored in event processing policy if event or object list is empty
 - Fixed issues: NX-60, NX-630, NX-916, NX-1123, NX-1151, NX-1161, NX-1165, NX-1171, NX-1174, NX-1178, NX-1188
 
 
